# Raven-TUI-client

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  runClient.sh
CPLUSPLUS/: CMakeLists.txt  main.cpp
CPLUSPLUS/logic/: app-exit-manager.h  event.h  execution-loop.h
client/: main.cpp
life-cycle/: CMakeLists.txt  app-exit-manager.cpp  app-exit-manager.h  event-emitter.h  event-handler.h  event-router.cpp  event-router.h  event.h  execution-loop.cpp  execution-loop.h  key-event.cpp  key-event.h  life-cycle-event.cpp  life-cycle-event.h  life-cycle-moment.h
src/: CMakeLists.txt
src/life-cycle/: app-exit-manager.h  event.h  execution-loop.h
src/logic/: event.h  execution-loop.h
text-ui/: CMakeLists.txt  NcursesWrapper.cpp  NcursesWrapper.h  TextInterface.h  key-poller.cpp  key-poller.h
util/: CMakeLists.txt  logger.cpp  logger.h  time-service.cpp  time-service.h
